fix missing erods-acomp mu

--- a/result.tex
+++ b/result.tex
@@ -791,10 +791,23 @@ In the $X1$ point each unit cell is divided by one nodal plane of the magnetic f
 The discussion of the previous structure has shown that the choice of permittivity and geometry obviously leads to a qualitative change in the structure behaviour. This becomes even more important in the case of dielectric rods parallel to the electric field. This structure can behave in several different ways. Not all differences may be directly seen from the PWEM results, as was the case in Fig. \ref{fg_rodh}.  % todo rewrite?
 
 
+Fig. \ref{fg_erods_acomparison}
 
 % TODO refereence  also to \cite{valdivia2012} and \cite{shi2007}
 %low-loss dielectrics discussed in http://www.nature.com/nnano/journal/v11/n1/full/nnano.2015.304.html??
 %\cite{yang2015}
+
+%}}}
+\begin{figure}[ht] 
+	\caption{Amplitude of \textbf{(a)}  reflectance, \textbf{(b)} transmittance \textbf{(c)} effective index of refraction $\Neff$ and \textbf{(d)} effective permittivity $\eeff$ for a rod array  $a = 100$ $\mu$m and grid resolution of 1 $\mu$m. } \label{fg_erods_acomparison} \centering \vspace{-3mm}
+\begin{tabular}{r}
+\begin{overpic}[width=0.85\textwidth]{img-meep/erods_acomparison_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\ 
+\begin{overpic}[width=0.85\textwidth]{img-meep/erods_acomparison_t.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.057\textwidth}\\
+\begin{overpic}[width=0.86\textwidth]{img-meep/erods_acomparison_n.pdf} \put (-1,28) {\textbf{(c)}} \end{overpic}\vspace{-0.055\textwidth}\\
+\begin{overpic}[width=0.86\textwidth]{img-meep/erods_acomparison_eps.pdf} \put (-1,28) {\textbf{(d)}} \end{overpic}\vspace{-0.030\textwidth}\\
+\begin{overpic}[width=0.86\textwidth]{img-meep/erods_acomparison_mu.pdf} \put (-1,28) {\textbf{(e)}} \end{overpic}\vspace{-0.030\textwidth}\\
+\end{tabular}
+\end{figure}
 
 %}}}
 
